--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -775,12 +775,24 @@ img {
   position: sticky;
 }
 
+.left-0{
+  left: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
 .top-3{
   top: 0.75rem;
 }
 
 .right-3{
   right: 0.75rem;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .top-1{
@@ -791,32 +803,8 @@ img {
   right: 0.25rem;
 }
 
-.right-0{
-  right: 0px;
-}
-
-.left-0{
-  left: 0px;
-}
-
 .top-16{
   top: 4rem;
-}
-
-.top-0{
-  top: 0px;
-}
-
-.top-2\/4{
-  top: 50%;
-}
-
-.right-\[300px\]{
-  right: 300px;
-}
-
-.z-40{
-  z-index: 40;
 }
 
 .col-span-12{
@@ -828,19 +816,8 @@ img {
   margin-right: auto;
 }
 
-.-mx-10{
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-}
-
-.-mx-14{
-  margin-left: -3.5rem;
+.-mr-14{
   margin-right: -3.5rem;
-}
-
-.-mx-16{
-  margin-left: -4rem;
-  margin-right: -4rem;
 }
 
 .ml-auto{
@@ -887,26 +864,6 @@ img {
   margin-bottom: 0.75rem;
 }
 
-.mt-\[-20px\]{
-  margin-top: -20px;
-}
-
-.mt-\[-40px\]{
-  margin-top: -40px;
-}
-
-.mt-\[40px\]{
-  margin-top: 40px;
-}
-
-.ml-\[-40px\]{
-  margin-left: -40px;
-}
-
-.-mr-14{
-  margin-right: -3.5rem;
-}
-
 .block{
   display: block;
 }
@@ -931,16 +888,16 @@ img {
   height: 24rem;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
 .h-full{
   height: 100%;
 }
 
 .h-3{
   height: 0.75rem;
-}
-
-.h-6{
-  height: 1.5rem;
 }
 
 .h-7{
@@ -955,10 +912,6 @@ img {
   height: 2.5rem;
 }
 
-.h-14{
-  height: 3.5rem;
-}
-
 .h-8{
   height: 2rem;
 }
@@ -967,8 +920,16 @@ img {
   height: 1.25rem;
 }
 
-.h-20{
-  height: 5rem;
+.h-\[\]{
+  height: ;
+}
+
+.h-9{
+  height: 2.25rem;
+}
+
+.h-60{
+  height: 15rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -987,6 +948,14 @@ img {
   width: 60%;
 }
 
+.w-14{
+  width: 3.5rem;
+}
+
+.w-1\/5{
+  width: 20%;
+}
+
 .w-3{
   width: 0.75rem;
 }
@@ -1001,10 +970,6 @@ img {
 
 .w-96{
   width: 24rem;
-}
-
-.w-14{
-  width: 3.5rem;
 }
 
 .w-80{
@@ -1027,28 +992,40 @@ img {
   width: 1.25rem;
 }
 
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-\[240px\]{
+  width: 240px;
+}
+
 .w-1\/4{
   width: 25%;
 }
 
-.w-1\/5{
-  width: 20%;
+.w-2\/5{
+  width: 40%;
 }
 
-.w-10{
-  width: 2.5rem;
+.min-w-full{
+  min-width: 100%;
 }
 
-.w-20{
-  width: 5rem;
+.min-w-\[400px\]{
+  min-width: 400px;
 }
 
-.w-16{
-  width: 4rem;
+.min-w-\[200px\]{
+  min-width: 200px;
 }
 
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .flex-none{
@@ -1070,16 +1047,6 @@ img {
 
 .translate-x-0{
   --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-0{
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-full{
-  --tw-translate-y: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1129,17 +1096,16 @@ img {
   resize: both;
 }
 
-.snap-x{
-  -ms-scroll-snap-type: x var(--tw-scroll-snap-strictness);
-      scroll-snap-type: x var(--tw-scroll-snap-strictness);
-}
-
-.snap-center{
-  scroll-snap-align: center;
-}
-
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-3{
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1160,10 +1126,6 @@ img {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-around{
-  justify-content: space-around;
 }
 
 .gap-4{
@@ -1192,35 +1154,14 @@ img {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
-.divide-x > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--tw-divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-}
-
-.divide-slate-300 > :not([hidden]) ~ :not([hidden]){
+.divide-zinc-700 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-divide-opacity));
+  border-color: rgb(63 63 70 / var(--tw-divide-opacity));
 }
 
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
-}
-
-.divide-slate-50 > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-opacity: 1;
-  border-color: rgb(248 250 252 / var(--tw-divide-opacity));
-}
-
-.divide-gray-700 > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-divide-opacity));
-}
-
-.divide-zinc-700 > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-opacity: 1;
-  border-color: rgb(63 63 70 / var(--tw-divide-opacity));
 }
 
 .overflow-auto{
@@ -1235,8 +1176,20 @@ img {
   overflow-x: auto;
 }
 
+.whitespace-normal{
+  white-space: normal;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
+}
+
+.break-words{
+  overflow-wrap: break-word;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-2xl{
@@ -1247,10 +1200,6 @@ img {
   border-radius: 50%;
 }
 
-.rounded-full{
-  border-radius: 9999px;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -1259,7 +1208,11 @@ img {
   border-radius: 0.5rem;
 }
 
-.border-b-\[1px\]{
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.border-b{
   border-bottom-width: 1px;
 }
 
@@ -1267,8 +1220,9 @@ img {
   border-bottom-width: 2px;
 }
 
-.border-b{
-  border-bottom-width: 1px;
+.border-zinc-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(63 63 70 / var(--tw-border-opacity));
 }
 
 .border-transparent{
@@ -1290,14 +1244,13 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
-.border-zinc-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(63 63 70 / var(--tw-border-opacity));
-}
-
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900\/50{
+  background-color: rgb(17 24 39 / 0.5);
 }
 
 .bg-white{
@@ -1358,23 +1311,6 @@ img {
 .bg-slate-900{
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-black\/50{
-  background-color: rgb(0 0 0 / 0.5);
-}
-
-.bg-gray-700\/50{
-  background-color: rgb(55 65 81 / 0.5);
-}
-
-.bg-gray-900\/50{
-  background-color: rgb(17 24 39 / 0.5);
 }
 
 .object-cover{
@@ -1443,9 +1379,9 @@ img {
   padding-right: 1.25rem;
 }
 
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pt-28{
@@ -1460,6 +1396,10 @@ img {
   padding-top: 1.5rem;
 }
 
+.pt-24{
+  padding-top: 6rem;
+}
+
 .pt-16{
   padding-top: 4rem;
 }
@@ -1468,8 +1408,20 @@ img {
   padding-right: 1.25rem;
 }
 
-.pl-10{
-  padding-left: 2.5rem;
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 
 .text-left{
@@ -1487,6 +1439,11 @@ img {
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-sm{
@@ -1509,18 +1466,13 @@ img {
   line-height: 1.75rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-8xl{
-  font-size: 6rem;
+.text-6xl{
+  font-size: 3.75rem;
   line-height: 1;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
+.text-5xl{
+  font-size: 3rem;
   line-height: 1;
 }
 
@@ -1544,17 +1496,14 @@ img {
   font-weight: 600;
 }
 
-.leading-10{
-  line-height: 2.5rem;
-}
-
-.leading-\[80px\]{
-  line-height: 80px;
-}
-
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-zinc-500{
@@ -1565,11 +1514,6 @@ img {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -1615,6 +1559,26 @@ img {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-sky-700{
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
+}
+
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -1681,11 +1645,6 @@ img {
   --tw-ring-offset-width: 2px;
 }
 
-.drop-shadow-lg{
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .transition{
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1694,16 +1653,20 @@ img {
   transition-duration: 150ms;
 }
 
-.duration-300{
-  transition-duration: 300ms;
+.duration-1000{
+  transition-duration: 1000ms;
 }
 
 .duration-500{
   transition-duration: 500ms;
 }
 
-.duration-1000{
-  transition-duration: 1000ms;
+.duration-300{
+  transition-duration: 300ms;
+}
+
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ease-out{
@@ -1712,10 +1675,6 @@ img {
 
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #sidebar .nav-heading{
@@ -1763,10 +1722,6 @@ img {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.group:hover .group-hover\:block{
-  display: block;
 }
 
 .group:hover .group-hover\:scale-100{
