--- a/public/css/app.css
+++ b/public/css/app.css
@@ -742,6 +742,12 @@ body {
   position: -webkit-sticky;
   position: sticky;
 }
+.left-0{
+  left: 0px;
+}
+.right-0{
+  right: 0px;
+}
 .top-3{
   top: 0.75rem;
 }
@@ -751,26 +757,14 @@ body {
 .top-0{
   top: 0px;
 }
-.left-0{
-  left: 0px;
-}
 .top-1{
   top: 0.25rem;
 }
 .right-1{
   right: 0.25rem;
 }
-.right-0{
-  right: 0px;
-}
 .top-16{
   top: 4rem;
-}
-.top-2\/4{
-  top: 50%;
-}
-.right-\[300px\]{
-  right: 300px;
 }
 .col-span-12{
   grid-column: span 12 / span 12;
@@ -779,17 +773,8 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.-mx-10{
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-}
-.-mx-14{
-  margin-left: -3.5rem;
+.-mr-14{
   margin-right: -3.5rem;
-}
-.-mx-16{
-  margin-left: -4rem;
-  margin-right: -4rem;
 }
 .ml-auto{
   margin-left: auto;
@@ -824,21 +809,6 @@ body {
 .mb-3{
   margin-bottom: 0.75rem;
 }
-.mt-\[-20px\]{
-  margin-top: -20px;
-}
-.mt-\[-40px\]{
-  margin-top: -40px;
-}
-.mt-\[40px\]{
-  margin-top: 40px;
-}
-.ml-\[-40px\]{
-  margin-left: -40px;
-}
-.-mr-14{
-  margin-right: -3.5rem;
-}
 .block{
   display: block;
 }
@@ -857,6 +827,9 @@ body {
 .h-96{
   height: 24rem;
 }
+.h-14{
+  height: 3.5rem;
+}
 .h-full{
   height: 100%;
 }
@@ -872,17 +845,20 @@ body {
 .h-10{
   height: 2.5rem;
 }
-.h-14{
-  height: 3.5rem;
-}
 .h-8{
   height: 2rem;
 }
 .h-5{
   height: 1.25rem;
 }
-.h-20{
-  height: 5rem;
+.h-\[\]{
+  height: ;
+}
+.h-9{
+  height: 2.25rem;
+}
+.h-60{
+  height: 15rem;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -896,6 +872,12 @@ body {
 .w-3\/5{
   width: 60%;
 }
+.w-14{
+  width: 3.5rem;
+}
+.w-1\/5{
+  width: 20%;
+}
 .w-3{
   width: 0.75rem;
 }
@@ -907,9 +889,6 @@ body {
 }
 .w-96{
   width: 24rem;
-}
-.w-14{
-  width: 3.5rem;
 }
 .w-80{
   width: 20rem;
@@ -926,23 +905,32 @@ body {
 .w-5{
   width: 1.25rem;
 }
+.w-1\/3{
+  width: 33.333333%;
+}
+.w-\[240px\]{
+  width: 240px;
+}
 .w-1\/4{
   width: 25%;
 }
-.w-1\/5{
-  width: 20%;
+.w-2\/5{
+  width: 40%;
 }
-.w-10{
-  width: 2.5rem;
+.min-w-full{
+  min-width: 100%;
 }
-.w-20{
-  width: 5rem;
+.min-w-\[400px\]{
+  min-width: 400px;
 }
-.w-16{
-  width: 4rem;
+.min-w-\[200px\]{
+  min-width: 200px;
 }
 .max-w-sm{
   max-width: 24rem;
+}
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 .flex-none{
   flex: none;
@@ -959,14 +947,6 @@ body {
 }
 .translate-x-0{
   --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-y-0{
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-translate-y-full{
-  --tw-translate-y: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90{
@@ -1009,15 +989,14 @@ body {
 .resize{
   resize: both;
 }
-.snap-x{
-  -ms-scroll-snap-type: x var(--tw-scroll-snap-strictness);
-      scroll-snap-type: x var(--tw-scroll-snap-strictness);
-}
-.snap-center{
-  scroll-snap-align: center;
-}
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-rows-3{
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 .flex-col{
   flex-direction: column;
@@ -1071,8 +1050,17 @@ body {
 .overflow-x-auto{
   overflow-x: auto;
 }
+.whitespace-normal{
+  white-space: normal;
+}
 .whitespace-nowrap{
   white-space: nowrap;
+}
+.break-words{
+  overflow-wrap: break-word;
+}
+.rounded-full{
+  border-radius: 9999px;
 }
 .rounded-2xl{
   border-radius: 1rem;
@@ -1080,14 +1068,14 @@ body {
 .rounded-\[50\%\]{
   border-radius: 50%;
 }
-.rounded-full{
-  border-radius: 9999px;
-}
 .rounded-md{
   border-radius: 0.375rem;
 }
 .rounded-lg{
   border-radius: 0.5rem;
+}
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 .border-b{
   border-bottom-width: 1px;
@@ -1117,6 +1105,9 @@ body {
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-gray-900\/50{
+  background-color: rgb(17 24 39 / 0.5);
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -1165,19 +1156,6 @@ body {
 .bg-slate-900{
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-black\/50{
-  background-color: rgb(0 0 0 / 0.5);
-}
-.bg-gray-700\/50{
-  background-color: rgb(55 65 81 / 0.5);
-}
-.bg-gray-900\/50{
-  background-color: rgb(17 24 39 / 0.5);
 }
 .object-cover{
   -o-object-fit: cover;
@@ -1231,6 +1209,10 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 .pt-28{
   padding-top: 7rem;
 }
@@ -1240,14 +1222,26 @@ body {
 .pt-6{
   padding-top: 1.5rem;
 }
+.pt-24{
+  padding-top: 6rem;
+}
 .pt-16{
   padding-top: 4rem;
 }
 .pr-5{
   padding-right: 1.25rem;
 }
-.pl-10{
-  padding-left: 2.5rem;
+.pt-2{
+  padding-top: 0.5rem;
+}
+.pt-4{
+  padding-top: 1rem;
+}
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 .text-left{
   text-align: left;
@@ -1261,6 +1255,10 @@ body {
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-sm{
   font-size: 0.875rem;
@@ -1278,16 +1276,12 @@ body {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-8xl{
-  font-size: 6rem;
-  line-height: 1;
-}
 .text-6xl{
   font-size: 3.75rem;
+  line-height: 1;
+}
+.text-5xl{
+  font-size: 3rem;
   line-height: 1;
 }
 .font-medium{
@@ -1305,15 +1299,13 @@ body {
 .font-semibold{
   font-weight: 600;
 }
-.leading-10{
-  line-height: 2.5rem;
-}
-.leading-\[80px\]{
-  line-height: 80px;
-}
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-zinc-500{
   --tw-text-opacity: 1;
@@ -1322,10 +1314,6 @@ body {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-slate-50{
   --tw-text-opacity: 1;
@@ -1362,6 +1350,22 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-sky-700{
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
+}
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 .opacity-0{
   opacity: 0;
@@ -1421,23 +1425,23 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.duration-300{
-  transition-duration: 300ms;
+.duration-1000{
+  transition-duration: 1000ms;
 }
 .duration-500{
   transition-duration: 500ms;
 }
-.duration-1000{
-  transition-duration: 1000ms;
+.duration-300{
+  transition-duration: 300ms;
+}
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ease-out{
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-item::before {
@@ -1473,10 +1477,6 @@ body {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.group:hover .group-hover\:block{
-  display: block;
 }
 
 .group:hover .group-hover\:scale-100{
