--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,12 +770,17 @@ img {
   position: relative;
 }
 
-.left-4{
-  left: 1rem;
+.sticky{
+  position: -webkit-sticky;
+  position: sticky;
 }
 
-.right-4{
-  right: 1rem;
+.left-0{
+  left: 0px;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .top-3{
@@ -790,10 +795,6 @@ img {
   top: 0px;
 }
 
-.left-0{
-  left: 0px;
-}
-
 .top-1{
   top: 0.25rem;
 }
@@ -802,12 +803,16 @@ img {
   right: 0.25rem;
 }
 
-.right-0{
-  right: 0px;
-}
-
 .top-16{
   top: 4rem;
+}
+
+.left-4{
+  left: 1rem;
+}
+
+.right-4{
+  right: 1rem;
 }
 
 .z-\[2\]{
@@ -822,17 +827,21 @@ img {
   grid-column: span 12 / span 12;
 }
 
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.ml-auto{
-  margin-left: auto;
-}
-
 .-mr-14{
   margin-right: -3.5rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .ml-3{
@@ -875,14 +884,6 @@ img {
   margin-bottom: 0.75rem;
 }
 
-.mr-8{
-  margin-right: 2rem;
-}
-
-.mr-10{
-  margin-right: 2.5rem;
-}
-
 .block{
   display: block;
 }
@@ -907,16 +908,16 @@ img {
   height: 24rem;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
 .h-full{
   height: 100%;
 }
 
 .h-3{
   height: 0.75rem;
-}
-
-.h-14{
-  height: 3.5rem;
 }
 
 .h-7{
@@ -939,8 +940,16 @@ img {
   height: 1.25rem;
 }
 
-.h-32{
-  height: 8rem;
+.h-\[\]{
+  height: ;
+}
+
+.h-9{
+  height: 2.25rem;
+}
+
+.h-60{
+  height: 15rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -959,28 +968,20 @@ img {
   width: 60%;
 }
 
-.w-3{
-  width: 0.75rem;
-}
-
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-2\/5{
-  width: 40%;
-}
-
-.w-full{
-  width: 100%;
-}
-
 .w-14{
   width: 3.5rem;
 }
 
-.w-32{
-  width: 8rem;
+.w-1\/5{
+  width: 20%;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .w-7{
@@ -1011,20 +1012,80 @@ img {
   width: 1.25rem;
 }
 
-.w-2{
-  width: 0.5rem;
+.w-1\/3{
+  width: 33.333333%;
 }
 
-.w-48{
-  width: 12rem;
+.w-\[240px\]{
+  width: 240px;
+}
+
+.w-1\/4{
+  width: 25%;
+}
+
+.w-2\/5{
+  width: 40%;
+}
+
+.w-10{
+  width: 2.5rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.w-28{
+  width: 7rem;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-64{
+  width: 16rem;
+}
+
+.w-60{
+  width: 15rem;
 }
 
 .w-56{
   width: 14rem;
 }
 
+.w-32{
+  width: 8rem;
+}
+
+.w-36{
+  width: 9rem;
+}
+
+.min-w-full{
+  min-width: 100%;
+}
+
+.min-w-\[400px\]{
+  min-width: 400px;
+}
+
+.min-w-\[200px\]{
+  min-width: 200px;
+}
+
 .max-w-sm{
   max-width: 24rem;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .flex-none{
@@ -1100,12 +1161,12 @@ img {
   resize: both;
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-2{
@@ -1114,6 +1175,14 @@ img {
 
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-rows-3{
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -1144,16 +1213,40 @@ img {
   gap: 0.5rem;
 }
 
-.gap-8{
-  gap: 2rem;
-}
-
 .gap-3{
   gap: 0.75rem;
 }
 
+.gap-8{
+  gap: 2rem;
+}
+
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-16{
+  gap: 4rem;
+}
+
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-36{
+  gap: 9rem;
+}
+
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1184,12 +1277,20 @@ img {
   overflow-x: auto;
 }
 
+.whitespace-normal{
+  white-space: normal;
+}
+
 .whitespace-nowrap{
   white-space: nowrap;
 }
 
 .break-words{
   overflow-wrap: break-word;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-2xl{
@@ -1200,10 +1301,6 @@ img {
   border-radius: 50%;
 }
 
-.rounded-full{
-  border-radius: 9999px;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -1212,12 +1309,28 @@ img {
   border-radius: 0.5rem;
 }
 
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
 
 .border-b-2{
   border-bottom-width: 2px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-t-2{
@@ -1256,14 +1369,33 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
+.border-zinc-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
+}
+
+.border-zinc-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+
 .border-zinc-200{
   --tw-border-opacity: 1;
   border-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 
+.border-zinc-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(244 244 245 / var(--tw-border-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900\/50{
+  background-color: rgb(17 24 39 / 0.5);
 }
 
 .bg-white{
@@ -1299,10 +1431,6 @@ img {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900\/50{
-  background-color: rgb(17 24 39 / 0.5);
 }
 
 .bg-red-100{
@@ -1361,6 +1489,11 @@ img {
   padding-bottom: 6rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1381,16 +1514,6 @@ img {
   padding-bottom: 0.25rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1399,6 +1522,11 @@ img {
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pt-28{
@@ -1417,20 +1545,12 @@ img {
   padding-top: 6rem;
 }
 
-.pr-4{
-  padding-right: 1rem;
-}
-
 .pt-16{
   padding-top: 4rem;
 }
 
 .pr-5{
   padding-right: 1.25rem;
-}
-
-.pr-8{
-  padding-right: 2rem;
 }
 
 .pt-2{
@@ -1441,16 +1561,32 @@ img {
   padding-top: 1rem;
 }
 
-.pt-1{
-  padding-top: 0.25rem;
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .pb-6{
   padding-bottom: 1.5rem;
 }
 
+.pt-12{
+  padding-top: 3rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
+}
+
 .pl-3{
   padding-left: 0.75rem;
+}
+
+.pt-1{
+  padding-top: 0.25rem;
 }
 
 .text-left{
@@ -1470,19 +1606,9 @@ img {
   line-height: 2.25rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-sm{
@@ -1490,14 +1616,34 @@ img {
   line-height: 1.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-base{
@@ -1509,25 +1655,38 @@ img {
   font-weight: 500;
 }
 
-.font-normal{
-  font-weight: 400;
-}
-
 .font-light{
   font-weight: 300;
 }
 
-.font-semibold{
-  font-weight: 600;
+.font-normal{
+  font-weight: 400;
 }
 
 .font-thin{
   font-weight: 100;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.font-extralight{
+  font-weight: 200;
+}
+
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-zinc-500{
@@ -1538,26 +1697,6 @@ img {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-sky-600{
-  --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.text-rose-600{
-  --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
-}
-
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -1605,14 +1744,69 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-sky-700{
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
+}
+
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.text-orange-400{
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-neutral-400{
+  --tw-text-opacity: 1;
+  color: rgb(163 163 163 / var(--tw-text-opacity));
+}
+
 .text-zinc-700{
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
 }
 
+.text-stone-400{
+  --tw-text-opacity: 1;
+  color: rgb(168 162 158 / var(--tw-text-opacity));
+}
+
+.text-stone-600{
+  --tw-text-opacity: 1;
+  color: rgb(87 83 78 / var(--tw-text-opacity));
+}
+
+.text-stone-500{
+  --tw-text-opacity: 1;
+  color: rgb(120 113 108 / var(--tw-text-opacity));
+}
+
+.text-stone-700{
+  --tw-text-opacity: 1;
+  color: rgb(68 64 60 / var(--tw-text-opacity));
+}
+
 .text-stone-800{
   --tw-text-opacity: 1;
   color: rgb(41 37 36 / var(--tw-text-opacity));
+}
+
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 
 .text-zinc-600{
@@ -1692,16 +1886,20 @@ img {
   transition-duration: 150ms;
 }
 
-.duration-500{
-  transition-duration: 500ms;
-}
-
 .duration-1000{
   transition-duration: 1000ms;
 }
 
+.duration-500{
+  transition-duration: 500ms;
+}
+
 .duration-300{
   transition-duration: 300ms;
+}
+
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ease-out{
@@ -1710,10 +1908,6 @@ img {
 
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #sidebar .nav-heading{
@@ -1808,6 +2002,10 @@ img {
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:w-\[980px\]{
+    width: 980px;
   }
 
   .lg\:w-\[1024px\]{
